--- a/typingTest.html
+++ b/typingTest.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="instruction-banner">
-                <p class="instruction">Click on the area below to start the game.</p>
+                <div class="instruction">Click on the area below to start the game.</div>
             </div>
 
             <textarea placeholder="start typing here..." 
