--- a/typingTest.html
+++ b/typingTest.html
@@ -47,8 +47,8 @@
 
             <textarea placeholder="start typing here..." 
             class="type-textbox"
-            onFocus="startTyping()"
-            onInput="validateCurrentTextTyped()"></textarea>
+            onfocus="startTyping()"
+            oninput="validateCurrentTextTyped()"></textarea>
 
             <button class ="restart" onClick="restartGame()">Restart</button>
         </div>
